tests/typing/bad/testfile-for-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void foo() {}
int main() { for( ; foo(); ); }

